--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ plugins:
 
 collections:
   - publications
+  - affiliations
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
