--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   and interaction techniques for novel, elastic displays.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+twitter_username: kammerjaeger
 github_username:  dkammer
 
 # Build settings
