--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,8 @@ plugins:
 collections:
   - publications
   - affiliations
+  - awards
+  - projects
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
