update config again

--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,7 @@ exclude:
     - vendor/gems/
     - vendor/ruby/
     - .gitignore
+    - .git
     - docker-compose.yml
     - LICENSE
     - README.md
